# bifidus_cli

./: README.md  bifidus_cli.py  pyproject.toml
sample_data/: lines.csv  output.md  routes.csv
