[tool.poetry]
name = "bifidus"
version = "0.0.1"
description = "Bifidus, improve your transit"
authors = ["nlehuby <noemie@junglebus.io>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
